@@ -37,6 +37,6 @@ THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 // обработать имя файла: сравнить с маской, масками, сгенерировать по маске
 bool ConvertWildcards(const string& SrcName,string &strDest, int SelectedFolderNameLength);
-int CmpName(const wchar_t *pattern, const wchar_t *str, bool skippath=true, bool CmpNameSearchMode=false);
+bool CmpName(const wchar_t *pattern, const wchar_t *str, bool skippath=true, bool CmpNameSearchMode=false);
 
 #endif // PROCESSNAME_HPP_8DEB440D_A0C0_40CB_9960_AF2BCD568A88
