@@ -93,22 +93,21 @@ static int PrepareHotKey(string &strHotKey)
 {
 	int FuncNum=0;
 
-	if (strHotKey.size() > 1)
+	if (strHotKey.size() > 1 && ToUpper(strHotKey.front()) == L'F')
 	{
-		// если хоткей больше 1 символа, считаем это случаем "F?", причем при кривизне всегда будет "F1"
 		FuncNum = static_cast<int>(std::wcstoul(strHotKey.data() + 1, nullptr, 10));
 
 		if (FuncNum < 1 || FuncNum > 24)
 		{
-			FuncNum=1;
-			strHotKey=L"F1";
+			FuncNum = 0;
+			strHotKey.clear();
 		}
 	}
 	else
 	{
 		// при наличии "&" продублируем
 		if (strHotKey == L"&")
-			strHotKey += L"&";
+			strHotKey.assign(2, L'&');
 	}
 
 	return FuncNum;
