@@ -1,4 +1,14 @@
-﻿drkns 08.03.2016 13:23:22 +0200 - build 4573
+﻿drkns 10.03.2016 00:22:16 +0200 - build 4574
+
+1. При вызове Menu.Show("\2qwe\n\4asd") терялись первые буквы в пунктах.
+
+2. Из user menu выкинута прэлэстная логика превращения любого кривого hotkey в F1.
+
+3. Уточнение 829.2 - подставляем FILE_FLAG_POSIX_SEMANTICS и для TRUNCATE_EXISTING.
+
+4. Прочий мелкий рефакторинг.
+
+drkns 08.03.2016 13:23:22 +0200 - build 4573
 
 1. 0003189: Падение Far 3.0 при выставлении в формате командной строки чего-нибудь, содержащего "(%)"
 
